--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,6 @@ Plugins/*/Intermediate/*
 # Cache files for the editor to use
 DerivedDataCache/*
 TyranozaurGame/Saved/Backup/
+TyranozaurGame/Intermediate/Config/
+TyranozaurGame/Saved/EditorCooked/
+TyranozaurGame/Saved/Config/
