basic camera setup

--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,4 @@ TyranozaurGame/Saved/Backup/
 TyranozaurGame/Intermediate/Config/
 TyranozaurGame/Saved/EditorCooked/
 TyranozaurGame/Saved/Config/
+TyranozaurGame/Saved/Autosaves/
